--- a/index.html
+++ b/index.html
@@ -272,13 +272,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 
                     <h2 class="text-color-dark center mb-lg"><img src="img/logo.png" style="max-width: 100%;" /><br></h2>
                             
-                              <a class="btn btn-secondary mb-md" href="" target="_self">Argentina</a>
+                              <a class="btn btn-secondary mb-md" href="argentina-back-to-school.html" target="_self">Argentina</a>
                               <a class="btn btn-secondary mb-md" href="" target="_self">Brasil</a>
                               <a class="btn btn-secondary mb-md" href="" target="_self">Colombia</a>
                               <a class="btn btn-secondary mb-md" href="" target="_self">Chile</a>
-                              <a class="btn btn-secondary mb-md" href="" target="_self">México</a>
                               <a class="btn btn-secondary mb-md" href="" target="_self">Perú</a>
-                              <a class="btn btn-secondary mb-md" href="" target="_self">Centroamérica</a>
+
 
                     </div>
                                  </div><!--- //row--->
