Ajuste de banner movil
correción de altura

--- a/argentina-back-to-school.html
+++ b/argentina-back-to-school.html
@@ -230,7 +230,7 @@
                     </div>
                 </header>
                 <div role="main" class="main" id="home">
-                    <div style="background-image: url('img/slides/slider_arg.jpg'); height: 500px; background-size: 100%; background-repeat: no-repeat;">
+                    <div class="banner-img">
                     </div>
                 </div>
                 <!--- //SLIDER --->
