--- a/index.html
+++ b/index.html
@@ -274,9 +274,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             
                               <a class="btn btn-secondary mb-md" href="argentina-back-to-school.html" target="_self">Argentina</a>
                               <a class="btn btn-secondary mb-md" href="" target="_self">Brasil</a>
-                              <a class="btn btn-secondary mb-md" href="" target="_self">Colombia</a>
-                              <a class="btn btn-secondary mb-md" href="" target="_self">Chile</a>
-                              <a class="btn btn-secondary mb-md" href="" target="_self">Perú</a>
+                              <a class="btn btn-secondary mb-md" href="colombia-back-to-school.html" target="_self">Colombia</a>
+                              <a class="btn btn-secondary mb-md" href="chile-back-to-school.html" target="_self">Chile</a>
+                              <a class="btn btn-secondary mb-md" href="peru-back-to-school.html" target="_self">Perú</a>
 
 
                     </div>
