--- a/peru-back-to-school.html
+++ b/peru-back-to-school.html
@@ -365,12 +365,12 @@
                                 </div>
                             </section>-->
                             <!--Fin: Video 2-->
-                            <section id="comprar" class="m-none background-color-light pt-none" style="background: #fff !important;">
+                            <section id="comprar" class=" m-none background-color-light pt-none" style="background: #fff !important;">
                                 <!--
                                 <div class="divider dotted divider-style-1 divider-secondary m-none p-none mb-lg">
                                     <i class="fa fa-chevron-down"></i>
                                 </div> -->
-                                <div class="container-full" style="background-image: url('img/slides/bg_tiendas.jpg'); background-size: 100%; background-size: cover; background-position: center; background-repeat: no-repeat; background-attachment: fixed;">
+                                <div class="container-full" style="background-image: url('img/slides/bg_tiendas.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; background-attachment: fixed;">
                                     <div class="row">
                                         <div class="col-md-12 p-md custom-overlay-style-3">
                                             <div class="col-md-12 p-none">
@@ -383,53 +383,30 @@
                                         <div class="row">
                                             <div class="col-lg-2 col-md-2 col-sm-2 col-6 center tiendas" style="padding: 5%;">
                                                 <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
-                                                    <a href="http://www.datasoft.com.ar">
-                                                    <img src="img/logos-argentina/logos-03.png" width="100" style="margin:auto; margin-top: 40%; display: flex;">
-                                                    </a>
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-2 col-md-2 col-sm-2 col-6 center tiendas" style="padding: 5%;">
-                                                <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
-                                                    <a href="http://www.ventas.tresmares.com.ar/">
-                                                        <img class="img-responsive" src="img/logos-argentina/logos-04.jpg" width="100" style="margin:auto; margin-top: 27%; display: flex;">
-                                                    </a>
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-2 col-md-2 col-sm-2 col-6 center tiendas" style="padding: 5%;">
-                                                <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
-                                                    <a href="https://www.integradosargentinos.com/product-listing.php?criterio=pd.nombre&search=wacom"><img src="img/logos-argentina/logos-05.png" width="100" style="margin:auto; display: flex; margin-top: 40%;"></a>
+                                                    <a href="https://doubleclick.pe/collections/wacom"><img src="img/logos-peru/doubleclick.jpg" width="130" style="margin:auto; display: flex; margin-top: 42%;"></a>
                                                 </div>
                                             </div>
                                             <div class="col-lg-2 col-md-2 col-sm-2 col-6 center tiendas" style="padding: 5%;">
                                                 <div style="background-color: white; padding: 7%; border-radius: 100%; height: 150px; width: 150px;">
-                                                    <a href="https://store.mexx.com.ar/"><img class="img-responsive" src="img/logos-argentina/mexx.png" width="250" style="margin:auto; display: flex; margin-top: 30%;"></a>
+                                                    <a href="http://dat-store.com/"><img class="img-responsive" src="img/logos-peru/dat.png" width="250" style="margin:auto; display: flex; margin-top: 16%;"></a>
                                                 </div>
                                             </div>
                                             <div class="col-lg-2 col-md-2 col-sm-2 col-6 center tiendas" style="padding: 5%;">
                                                 <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
-                                                    <a href="https://libreriapeluffo.com.ar/productos/12321242/insumos-hard/tabletas-digitalizadoras"><img class="img-responsive" src="img/logos-argentina/peluffo.png" width="300" style="margin:auto; display: flex; margin-top: 35%;"></a>
+                                                    <a href="https://www.ishopperu.com.pe"><img class="img-responsive" src="img/logos-peru/ishop.jpg" width="120" style="margin:auto; display: flex; margin-top: 31%"></a>
                                                 </div>
                                             </div>
+                                            
                                         </div>
                                         <div class="row">
                                             <div class="col-lg-2 col-md-2 col-sm-2 col-6 center tiendas" style="padding: 5%;">
                                                 <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
-                                                    <a href="http://planetazenok.com/buscar/wacom/"><img class="img-responsive" src="img/logos-argentina/zenok.png" width="300" style="margin:auto; display: flex; margin-top: 38%;"></a>
+                                                    <a href="http://www.hiraoka.com.pe/"><img class="img-responsive" src="img/logos-peru/hiraoka.png" width="120" style="margin:auto; display: flex; margin-top: 18%;"></a>
                                                 </div>
                                             </div>
                                             <div class="col-lg-2 col-md-2 col-sm-2 col-6 center tiendas" style="padding: 5%;">
                                                 <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
-                                                    <a href="https://www.compumundo.com.ar/q/wacom/srch?q=wacom"><img class="img-responsive" src="img/logos-argentina/compumundo.png" width="250" style="margin:auto; display: flex; margin-top: 32%;"></a>
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-2 col-md-2 col-sm-2 col-6 center tiendas" style="padding: 5%;">
-                                                <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
-                                                    <a href="https://www.fcstore.com.ar/index.php?buscador=wacom"><img class="img-responsive" src="img/logos-argentina/logos-02.png" width="250" style="margin:auto; display: flex; margin-top: 32%;"></a>
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-2 col-md-2 col-sm-2 col-6 center tiendas" style="padding: 5%;">
-                                                <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
-                                                    <a href="https://www.polytech.com.ar/"><img class="img-responsive rounded" src="img/logos-argentina/polytech.png" width="150" style="margin:auto; display: flex;"></a>
+                                                    <a href="https://www.tailoy.com.pe/wacom-tableta-digital-intuos-draw-small.html"><img class="img-responsive" src="img/logos-peru/tailoy.png" width="100" style="margin:auto; display: flex; margin-top: 18%;"></a>
                                                 </div>
                                             </div>
                                         </div>
