--- a/brasil-back-to-school.html
+++ b/brasil-back-to-school.html
@@ -230,7 +230,8 @@
                     </div>
                 </header>
                 <div role="main" class="main" id="home">
-                    <div class="banner-img-br">
+                    <div class="">
+                        <img src="img/slides/brasil-b2s.jpg" class="img-responsive">
                     </div>
                 </div>
                 <!--- //SLIDER --->
