--- a/argentina-back-to-school.html
+++ b/argentina-back-to-school.html
@@ -230,7 +230,8 @@
                     </div>
                 </header>
                 <div role="main" class="main" id="home">
-                    <div class="banner-img">
+                    <div class="">
+                    	<img src="img/slides/slider_arg-b2s.jpg" class="img-responsive">
                     </div>
                 </div>
                 <!--- //SLIDER --->
