--- a/colombia-back-to-school.html
+++ b/colombia-back-to-school.html
@@ -230,7 +230,8 @@
                     </div>
                 </header>
                 <div role="main" class="main" id="home">
-                    <div class="banner-img-col">
+                    <div class="">
+                        <img src="img/slides/slider_col-b2s.jpg" class="img-responsive">
                     </div>
                 </div>
                 <!--- //SLIDER --->
