--- a/peru-back-to-school.html
+++ b/peru-back-to-school.html
@@ -230,7 +230,8 @@
                     </div>
                 </header>
                 <div role="main" class="main" id="home">
-                    <div class="banner-img img-fluid" style="height: 100%:">
+                    <div class="">
+                        <img src="img/slides/slider_arg-b2s.jpg" class="img-responsive">
                     </div>
                 </div>
                 <!--- //SLIDER --->
