--- a/brasil-back-to-school.html
+++ b/brasil-back-to-school.html
@@ -259,7 +259,7 @@
                             </div>
                             <div class="col-lg-3 col-md-3 col-sm-3 col-3">
                                 <li data-target="#carouselExampleIndicators" data-slide-to="3">
-                                    <img src="img/products/one.png" class="img-responsive text-center" width="200" style="margin:auto;">
+                                    <img src="img/products/wacom-one.png" class="img-responsive text-center" width="200" style="margin:auto;">
                                     <img src="img/one-logo.png" class="img-responsive text-center" width="180" style="margin:auto;">
                                 </li>
                             </div>
@@ -519,19 +519,19 @@
                                                 </div>
                                             <div class="row">
                                                 <div class="col-lg-3 col-md-3 col-sm-3 col-6">
-                                                    <a href="https://www.youtube.com/watch?v=I_kyFj9KrsI" target="_blank"><img src="img/paulina.jpg" class="img-responsive img-artistas" width="250"></a>
+                                                    <a href="https://www.youtube.com/watch?v=I_kyFj9KrsI" target="_blank"><img src="img/paulina.jpg" class="img-responsive img-artistas" ></a>
                                                     <h2 class="text-center" style="font-size: 2em;">Paulinaapc</h2>
                                                 </div>
                                                 <div class="col-lg-3 col-md-3 col-sm-3 col-6">
-                                                    <a href="https://www.youtube.com/watch?v=W1rzxXnLmZI" target="_blank"><img src="img/mikeila.jpg" class="img-responsive img-artistas" width="250"></a>
+                                                    <a href="https://www.youtube.com/watch?v=W1rzxXnLmZI" target="_blank"><img src="img/mikeila.jpg" class="img-responsive img-artistas" ></a>
                                                     <h2 class="text-center" style="font-size: 2em;">Mikeila</h2>
                                                 </div>
                                                 <div class="col-lg-3 col-md-3 col-sm-3 col-6">
-                                                    <a href="https://www.youtube.com/watch?v=hTNGCmtv7F4" target="_blank"><img src="img/felo.jpg" class="img-responsive img-artistas" width="250"></a>
+                                                    <a href="https://www.youtube.com/watch?v=hTNGCmtv7F4" target="_blank"><img src="img/felo.jpg" class="img-responsive img-artistas" ></a>
                                                     <h2 class="text-center" style="font-size: 2em;">Felo</h2>
                                                 </div>
                                                 <div class="col-lg-3 col-md-3 col-sm-3 col-6">
-                                                    <a href="https://www.youtube.com/watch?v=vuHloudVc_w" target="_blank"><img src="img/amorelli.png" class="img-responsive img-artistas" width="250"></a>
+                                                    <a href="https://www.youtube.com/watch?v=vuHloudVc_w" target="_blank"><img src="img/amorelli.png" class="img-responsive img-artistas" ></a>
                                                     <h2 class="text-center" style="font-size: 2em;">Amorelli</h2>
                                                 </div>
                                             </div>
