--- a/brasil-back-to-school.html
+++ b/brasil-back-to-school.html
@@ -285,7 +285,7 @@
                                             <img src="img/wacom-intuos-pro.png" style="max-width: 100%;" />
                                             <h3></h3>
                                             <h3>
-                                            Projetada para maximizar os recursos da incrível Wacom Pro Pen 2. Com recursos de conectividade Bluetooth integrados e um novo design elegante, se configura com facilidade. Ele permite que você ganhe precisão e controle, agilize o seu fluxo de trabalho e aproveite todas as capacidades do seu software criativo favorito graças às inovações integradas no novo Intuos Pro.
+                                            Projetada para maximizar os recursos da incrível Wacom Pro Pen 2. Com recursos de conectividade Bluetooth integrados e um novo design elegante, e fácil de configurar. Ela permite que você ganhe precisão e controle, agilize o seu fluxo de trabalho e aproveite todas as capacidades do seu software criativo favorito graças às inovações integradas na nova Intuos Pro.
                                             </h3>
                                             <h3><a class="link" href="https://www.wacom.com/es-es/products/pen-tablets/wacom-intuos-pro" target="_blank">Explore Wacom Intuos Pro <img src="img/arrow-n.png"></a></h3>
                                             <span style="font-size:26px;">
@@ -341,7 +341,7 @@
                                             <img src="img/wacom-cintiq-pro.png" style="max-width: 100%;" />
                                             <h3></h3>
                                             <h3>
-                                            Crie diretamente na tela com a experiência mais natural que se assemelha a de um lápis. Projetada para artistas profissionais e designers que necessitam uma conexão direta e intuitiva da caneta para a tela. Independente se você trabalha no Mac ou PC, a Wacom Cintiq Pro oferece a mais avançada experiência interativa via monitor.
+                                            Crie diretamente na tela com a experiência mais natural que se assemelha a de um lápis. Projetada para artistas profissionais e designers que necessitam de uma conexão direta e intuitiva da caneta para a tela. Independente se você trabalha no Mac ou PC, a Wacom Cintiq Pro oferece a mais avançada experiência interativa via monitor.
                                             </h3>
                                             <h3><a class="link" href="https://www.wacom.com/es-es/products/pen-tablets/wacom-intuos" target="_blank">Explore Cintiq Pro <img src="img/arrow-n.png"></a></h3>
                                             <span style="font-size:26px;">
@@ -379,7 +379,7 @@
                                         </div>
                                         <div class="col-lg-5 col-sm-8 col-xs-12 left mb-sm" style="margin-top: 30px;">
                                             <div class="col-lg-3 col-md-3 col-sm-12 col-lg-offset-6 col-md-offset-6 col-sm-offset-3" style="width: 120px; height: 120px; background-color: #0088cc; border-radius: 100%; padding: 20px; position: absolute; z-index:5;">
-                                                <h6 style="color:white; font-size: 17px; text-align: center; margin:auto; position: relative; padding-top: 15px;">Hasta -20% de descuento</h6>
+                                                <h6 style="color:white; font-size: 17px; text-align: center; margin:auto; position: relative; padding-top: 15px;">Descontos de até 20%</h6>
                                             </div>
                                             <img src="img/products/wacom-one.png" style="max-width: 95%;"/>
                                         </div>
@@ -402,13 +402,15 @@
                             <section id="videos">
                                 <div class="container-full" style="background-color: white;">
                                     <div class="row">
-                                        <div class="col-lg-12 col-md-12 col-sm-12 col-12">
+                                        <div class="col-lg-2 col-md-2"></div>
+                                        <div class="col-lg-8 col-md-8 col-sm-12 col-12">
                                             <div class="embed-responsive embed-responsive-16by9">
-                                                <iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/KghanqRVFXA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                                <iframe width="1072" height="480" src="https://www.youtube.com/embed/koGfcPAeeK4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                                             </div>
                                             
                                         </div>
+                                        <div class="col-lg-2 col-md-2"></div>
                                         <!--VIDEO 2 ------------------->
                                         <!--<div class="col-lg-6 col-md-6 col-sm-6 col-6">
                                             <div class="embed-responsive embed-responsive-16by9">
@@ -452,53 +454,58 @@
                                     </div>
                                     <div class="container">
                                         <div class="row">
-                                            <div class="col-lg-2 col-md-2 col-sm-2 col-6 center tiendas" style="padding: 5%;">
+                                            <div class="col-lg-2 col-md-2 col-sm-6 col-6 center tiendas" style="padding: 5%;">
                                                 <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
                                                     <a href="https://www.kabum.com.br/cgi-local/site/listagem/listagem.cgi?string=wacom&btnG" target="_blank">
                                                     <img src="img/logos-brasil/kabum.png" width="100" style="margin:auto; margin-top: 40%; display: flex;">
                                                     </a>
                                                 </div>
                                             </div>
-                                            <div class="col-lg-2 col-md-2 col-sm-2 col-6 center tiendas" style="padding: 5%;">
+                                            <div class="col-lg-2 col-md-2 col-sm-6 col-6 center tiendas" style="padding: 5%;">
                                                 <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
                                                     <a href="http://www.wacomstore.com.br" target="_blank">
                                                         <img class="img-responsive" src="img/logos-brasil/wstore.jpg" width="100" style="margin:auto; margin-top: 32%; display: flex;">
                                                     </a>
                                                 </div>
                                             </div>
-                                            <div class="col-lg-2 col-md-2 col-sm-2 col-6 center tiendas" style="padding: 5%;">
+                                            <div class="col-lg-2 col-md-2 col-sm-6 col-6 center tiendas" style="padding: 5%;">
                                                 <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
                                                     <a href="https://busca.magazineluiza.com.br/busca?q=wacom" target="_blank"><img src="img/logos-brasil/magazineluiza.png" width="120" style="margin:auto; display: flex; margin-top: 45%;"></a>
                                                 </div>
                                             </div>
-                                            <div class="col-lg-2 col-md-2 col-sm-2 col-6 center tiendas" style="padding: 5%;">
+                                            <div class="col-lg-2 col-md-2 col-sm-6 col-6 center tiendas" style="padding: 5%;">
                                                 <div style="background-color: white; padding: 7%; border-radius: 100%; height: 150px; width: 150px;">
                                                     <a href="https://www.kalunga.com.br/busca/wacom/1" target="_blank"><img class="img-responsive" src="img/logos-brasil/kalunga.jpg" width="250" style="margin:auto; display: flex; margin-top: 35%;"></a>
                                                 </div>
                                             </div>
-                                            <div class="col-lg-2 col-md-2 col-sm-2 col-6 center tiendas" style="padding: 5%;">
+                                            <div class="col-lg-2 col-md-2 col-sm-6 col-6 center tiendas" style="padding: 5%;">
                                                 <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
                                                     <a href="https://www.shoptime.com.br/busca/wacom" target="_blank"><img class="img-responsive" src="img/logos-brasil/shoptime.svg" width="300" style="margin:auto; display: flex; margin-top: 35%;"></a>
                                                 </div>
                                             </div>
+                                            <div class="col-lg-2 col-md-2 col-sm-6 col-6 center tiendas d-sm-block d-md-none" style="padding: 5%;">
+                                                <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
+                                                    <a href="https://search3.pontofrio.com.br/busca?q=wacom" target="_blank"><img class="img-responsive rounded" src="img/logos-brasil/pontofrio.jpg" width="150" style="margin:auto; display: flex; margin-top: 38%"></a>
+                                                </div>
+                                            </div>
                                         </div>
                                         <div class="row">
-                                            <div class="col-lg-2 col-md-2 col-sm-2 col-6 center tiendas" style="padding: 5%;">
+                                            <div class="col-lg-2 col-md-2 col-sm-6 col-6 center tiendas" style="padding: 5%;">
                                                 <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
                                                     <a href="https://www.submarino.com.br/busca/wacom" target="_blank"><img class="img-responsive" src="img/logos-brasil/submarino.png" width="120" style="margin:auto; display: flex; margin-top: 32%;"></a>
                                                 </div>
                                             </div>
-                                            <div class="col-lg-2 col-md-2 col-sm-2 col-6 center tiendas" style="padding: 5%;">
+                                            <div class="col-lg-2 col-md-2 col-sm-6 col-6 center tiendas" style="padding: 5%;">
                                                 <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
                                                     <a href="https://www.americanas.com.br/busca/wacom" target="_blank"><img class="img-responsive" src="img/logos-brasil/americanas.png" width="250" style="margin:auto; display: flex; margin-top: 32%;"></a>
                                                 </div>
                                             </div>
-                                            <div class="col-lg-2 col-md-2 col-sm-2 col-6 center tiendas" style="padding: 5%;">
+                                            <div class="col-lg-2 col-md-2 col-sm-6 col-6 center tiendas" style="padding: 5%;">
                                                 <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
                                                     <a href="https://buscas2.casasbahia.com.br/busca?q=wacom" target="_blank"><img class="img-responsive" src="img/logos-brasil/casasbahia.jpg" width="250" style="margin:auto; display: flex; margin-top: 32%;"></a>
                                                 </div>
                                             </div>
-                                            <div class="col-lg-2 col-md-2 col-sm-2 col-6 center tiendas" style="padding: 5%;">
+                                            <div class="col-lg-2 col-md-2 col-sm-6 col-6 center tiendas d-none d-sm-block" style="padding: 5%;">
                                                 <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
                                                     <a href="https://search3.pontofrio.com.br/busca?q=wacom" target="_blank"><img class="img-responsive rounded" src="img/logos-brasil/pontofrio.jpg" width="150" style="margin:auto; display: flex; margin-top: 38%"></a>
                                                 </div>
