--- a/colombia-back-to-school.html
+++ b/colombia-back-to-school.html
@@ -331,12 +331,14 @@
                 <section id="videos">
                                 <div class="container-full" style="background-color: white;">
                                     <div class="row">
-                                        <div class="col-lg-12 col-md-12 sol-sm-12 col-12">
+                                        <div class="col-lg-2 col-md-2"></div>
+                                        <div class="col-lg-8 col-md-8 sol-sm-12 col-12">
                                             <div class="embed-responsive embed-responsive-16by9">
                                                 <iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/KghanqRVFXA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                             </div>
                                             
                                         </div>
+                                        <div class="col-lg-2 col-md-2"></div>
                                     </div>
                                 </div>
                 </section>
@@ -412,6 +414,12 @@
                                                     <a href="https://www.capitalcolombia.com/articulo/wacom_colombia" target="_blank"><img class="img-responsive" src="img/logos-col/capitalcol.jpg" width="100" style="margin:auto; display: flex; margin-top: 12%;"></a>
                                                 </div>
                                             </div>
+                                            <div class="col-lg-2 col-md-2 col-sm-2 col-6 center tiendas" style="padding: 5%;">
+                                                <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
+                                                    <a href="https://www.apcomputadores.com/shop" target="_blank"><img class="img-responsive" src="img/logos-col/ap.png" width="100" style="margin:auto; display: flex; margin-top: 20%;"></a>
+                                                </div>
+                                            </div>
+
                                         </div>
                                         <!--- //row --->
                                     </div>
