--- a/peru-back-to-school.html
+++ b/peru-back-to-school.html
@@ -331,12 +331,14 @@
                 <section id="videos">
                     <div class="container-full" style="background-color: white;">
                                     <div class="row">
-                                        <div class="col-lg-12 col-md-12 sol-sm-12 col-12">
+                                        <div class="col-lg-2 col-md-2"></div>
+                                        <div class="col-lg-8 col-md-8 sol-sm-12 col-12">
                                             <div class="embed-responsive embed-responsive-16by9">
                                                 <iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/KghanqRVFXA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                             </div>
                                             
                                         </div>
+                                        <div class="col-lg-2 col-md-2"></div>
                                     </div>
                                 </div>
                 </section>
@@ -389,7 +391,11 @@
                                                     <a href="https://www.ishopperu.com.pe" target="_blank"><img class="img-responsive" src="img/logos-peru/ishop.jpg" width="120" style="margin:auto; display: flex; margin-top: 31%"></a>
                                                 </div>
                                             </div>
-                                            
+                                            <div class="col-lg-2 col-md-2 col-sm-2 col-6 center tiendas d-sm-block d-md-none" style="padding: 5%;">
+                                                <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
+                                                    <a href="http://www.compuusaperu.com/default_on.asp" target="_blank"><img class="img-responsive" src="img/logos-peru/compusa.jpg" width="150" style="margin:auto; display: flex; margin-top: 42%;"></a>
+                                                </div>
+                                            </div>
                                         </div>
                                         <div class="row">
                                             <div class="col-lg-2 col-md-2 col-sm-2 col-6 center tiendas" style="padding: 5%;">
@@ -402,7 +408,7 @@
                                                     <a href="https://www.tailoy.com.pe/wacom-tableta-digital-intuos-draw-small.html" target="_blank"><img class="img-responsive" src="img/logos-peru/tailoy.png" width="100" style="margin:auto; display: flex; margin-top: 18%;"></a>
                                                 </div>
                                             </div>
-                                            <div class="col-lg-2 col-md-2 col-sm-2 col-6 center tiendas" style="padding: 5%;">
+                                            <div class="col-lg-2 col-md-2 col-sm-2 col-6 center tiendas d-none d-sm-block" style="padding: 5%;">
                                                 <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
                                                     <a href="http://www.compuusaperu.com/default_on.asp" target="_blank"><img class="img-responsive" src="img/logos-peru/compusa.jpg" width="150" style="margin:auto; display: flex; margin-top: 42%;"></a>
                                                 </div>
