Cambio webmall Argentina
Sustitución de polytech

--- a/argentina-back-to-school.html
+++ b/argentina-back-to-school.html
@@ -430,7 +430,7 @@
                                             </div>
                                             <div class="col-lg-2 col-md-2 col-sm-6 col-6 center tiendas d-none d-sm-block" style="padding: 5%;">
                                                 <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
-                                                    <a href="https://www.polytech.com.ar/" target="_blank"><img class="img-responsive rounded" src="img/logos-argentina/polytech.png" width="150" style="margin:auto; display: flex;"></a>
+                                                    <a href="https://mallweb.com.ar/catalogsearch/result/?q=wacom" target="_blank"><img class="img-responsive rounded" src="img/logos-argentina/mallweb.png" width="150" style="margin:auto; display: flex; margin-top: 20%"></a>
                                                 </div>
                                             </div>
                                         </div>
@@ -449,19 +449,19 @@
                                                 </div>
                                             <div class="row">
                                                 <div class="col-lg-3 col-md-3 col-sm-3 col-6">
-                                                    <a href="https://www.youtube.com/watch?v=I_kyFj9KrsI" target="_blank"><img src="img/paulina.jpg" class="img-responsive img-artistas" width="250"></a>
+                                                    <a href="https://www.youtube.com/watch?v=I_kyFj9KrsI" target="_blank"><img src="img/paulina.jpg" class="img-responsive img-artistas"></a>
                                                     <h2 class="text-center" style="font-size: 2em;">Paulinaapc</h2>
                                                 </div>
                                                 <div class="col-lg-3 col-md-3 col-sm-3 col-6">
-                                                    <a href="https://www.youtube.com/watch?v=W1rzxXnLmZI" target="_blank"><img src="img/mikeila.jpg" class="img-responsive img-artistas" width="250"></a>
+                                                    <a href="https://www.youtube.com/watch?v=W1rzxXnLmZI" target="_blank"><img src="img/mikeila.jpg" class="img-responsive img-artistas"></a>
                                                     <h2 class="text-center" style="font-size: 2em;">Mikeila</h2>
                                                 </div>
                                                 <div class="col-lg-3 col-md-3 col-sm-3 col-6">
-                                                    <a href="https://www.youtube.com/watch?v=hTNGCmtv7F4" target="_blank"><img src="img/felo.jpg" class="img-responsive img-artistas" width="250"></a>
+                                                    <a href="https://www.youtube.com/watch?v=hTNGCmtv7F4" target="_blank"><img src="img/felo.jpg" class="img-responsive img-artistas"></a>
                                                     <h2 class="text-center" style="font-size: 2em;">Felo</h2>
                                                 </div>
                                                 <div class="col-lg-3 col-md-3 col-sm-3 col-6">
-                                                    <a href="https://www.youtube.com/watch?v=vuHloudVc_w" target="_blank"><img src="img/amorelli.png" class="img-responsive img-artistas" width="250"></a>
+                                                    <a href="https://www.youtube.com/watch?v=vuHloudVc_w" target="_blank"><img src="img/amorelli.png" class="img-responsive img-artistas"></a>
                                                     <h2 class="text-center" style="font-size: 2em;">Amorelli</h2>
                                                 </div>
                                             </div>
