--- a/peru-back-to-school.html
+++ b/peru-back-to-school.html
@@ -429,19 +429,19 @@
                                                 </div>
                                             <div class="row">
                                                 <div class="col-lg-3 col-md-3 col-sm-3 col-6">
-                                                    <a href="https://www.youtube.com/watch?v=I_kyFj9KrsI" target="_blank"><img src="img/paulina.jpg" class="img-responsive img-artistas" width="250"></a>
+                                                    <a href="https://www.youtube.com/watch?v=I_kyFj9KrsI" target="_blank"><img src="img/paulina.jpg" class="img-responsive img-artistas"></a>
                                                     <h2 class="text-center" style="font-size: 2em;">Paulinaapc</h2>
                                                 </div>
                                                 <div class="col-lg-3 col-md-3 col-sm-3 col-6">
-                                                    <a href="https://www.youtube.com/watch?v=W1rzxXnLmZI" target="_blank"><img src="img/mikeila.jpg" class="img-responsive img-artistas" width="250"></a>
+                                                    <a href="https://www.youtube.com/watch?v=W1rzxXnLmZI" target="_blank"><img src="img/mikeila.jpg" class="img-responsive img-artistas"></a>
                                                     <h2 class="text-center" style="font-size: 2em;">Mikeila</h2>
                                                 </div>
                                                 <div class="col-lg-3 col-md-3 col-sm-3 col-6">
-                                                    <a href="https://www.youtube.com/watch?v=hTNGCmtv7F4" target="_blank"><img src="img/felo.jpg" class="img-responsive img-artistas" width="250"></a>
+                                                    <a href="https://www.youtube.com/watch?v=hTNGCmtv7F4" target="_blank"><img src="img/felo.jpg" class="img-responsive img-artistas"></a>
                                                     <h2 class="text-center" style="font-size: 2em;">Felo</h2>
                                                 </div>
                                                 <div class="col-lg-3 col-md-3 col-sm-3 col-6">
-                                                    <a href="https://www.youtube.com/watch?v=vuHloudVc_w" target="_blank"><img src="img/amorelli.png" class="img-responsive img-artistas" width="250"></a>
+                                                    <a href="https://www.youtube.com/watch?v=vuHloudVc_w" target="_blank"><img src="img/amorelli.png" class="img-responsive img-artistas"></a>
                                                     <h2 class="text-center" style="font-size: 2em;">Amorelli</h2>
                                                 </div>
                                             </div>
