Correcion de padding

--- a/argentina-back-to-school.html
+++ b/argentina-back-to-school.html
@@ -377,31 +377,31 @@
                                     </div>
                                     <div class="container">
                                         <div class="row">
-                                            <div class="col-lg-2 col-md-2 col-sm-6 col-6 center tiendas" style="padding: 5%;">
+                                            <div class="col-lg-2 col-md-2 col-sm-6 col-6 center tiendas" style="">
                                                 <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
                                                     <a href="http://www.datasoft.com.ar" target="_blank">
                                                     <img src="img/logos-argentina/logos-03.png" width="100" style="margin:auto; margin-top: 40%; display: flex;">
                                                     </a>
                                                 </div>
                                             </div>
-                                            <div class="col-lg-2 col-md-2 col-sm-6 col-6 center tiendas" style="padding: 5%;">
+                                            <div class="col-lg-2 col-md-2 col-sm-6 col-6 center tiendas" style="">
                                                 <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
                                                     <a href="https://www.tresmares.com.ar/" target="_blank">
                                                         <img class="img-responsive" src="img/logos-argentina/logos-04.jpg" width="100" style="margin:auto; margin-top: 27%; display: flex;">
                                                     </a>
                                                 </div>
                                             </div>
-                                            <div class="col-lg-2 col-md-2 col-sm-6 col-6 center tiendas" style="padding: 5%;">
+                                            <div class="col-lg-2 col-md-2 col-sm-6 col-6 center tiendas" style="">
                                                 <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
                                                     <a href="https://www.integradosargentinos.com/product-listing.php?criterio=pd.nombre&search=wacom" target="_blank"><img src="img/logos-argentina/logos-05.png" width="100" style="margin:auto; display: flex; margin-top: 40%;"></a>
                                                 </div>
                                             </div>
-                                            <div class="col-lg-2 col-md-2 col-sm-6 col-6 center tiendas" style="padding: 5%;">
+                                            <div class="col-lg-2 col-md-2 col-sm-6 col-6 center tiendas" style="">
                                                 <div style="background-color: white; padding: 7%; border-radius: 100%; height: 150px; width: 150px;">
                                                     <a href="https://store.mexx.com.ar/" target="_blank"><img class="img-responsive" src="img/logos-argentina/mexx.png" width="250" style="margin:auto; display: flex; margin-top: 30%;"></a>
                                                 </div>
                                             </div>
-                                            <div class="col-lg-2 col-md-2 col-sm-6 col-6 center tiendas" style="padding: 5%;">
+                                            <div class="col-lg-2 col-md-2 col-sm-6 col-6 center tiendas" style="">
                                                 <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
                                                     <a href="https://libreriapeluffo.com.ar/productos/12321242/insumos-hard/tabletas-digitalizadoras" target="_blank"><img class="img-responsive" src="img/logos-argentina/peluffo.png" width="300" style="margin:auto; display: flex; margin-top: 35%;"></a>
                                                 </div>
@@ -413,22 +413,22 @@
                                             </div>
                                         </div>
                                         <div class="row">
-                                            <div class="col-lg-2 col-md-2 col-sm-6 col-6 center tiendas" style="padding: 5%;">
+                                            <div class="col-lg-2 col-md-2 col-sm-6 col-6 center tiendas" style="">
                                                 <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
                                                     <a href="http://planetazenok.com/buscar/wacom/" target="_blank"><img class="img-responsive" src="img/logos-argentina/zenok.png" width="300" style="margin:auto; display: flex; margin-top: 38%;"></a>
                                                 </div>
                                             </div>
-                                            <div class="col-lg-2 col-md-2 col-sm-6 col-6 center tiendas" style="padding: 5%;">
+                                            <div class="col-lg-2 col-md-2 col-sm-6 col-6 center tiendas" style="">
                                                 <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
                                                     <a href="https://www.compumundo.com.ar/q/wacom/srch?q=wacom" target="_blank"><img class="img-responsive" src="img/logos-argentina/compumundo.png" width="250" style="margin:auto; display: flex; margin-top: 32%;"></a>
                                                 </div>
                                             </div>
-                                            <div class="col-lg-2 col-md-2 col-sm-6 col-6 center tiendas" style="padding: 5%;">
+                                            <div class="col-lg-2 col-md-2 col-sm-6 col-6 center tiendas" style="">
                                                 <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
                                                     <a href="https://www.fcstore.com.ar/index.php?buscador=wacom" target="_blank"><img class="img-responsive" src="img/logos-argentina/logos-02.png" width="250" style="margin:auto; display: flex; margin-top: 32%;"></a>
                                                 </div>
                                             </div>
-                                            <div class="col-lg-2 col-md-2 col-sm-6 col-6 center tiendas d-none d-sm-block" style="padding: 5%;">
+                                            <div class="col-lg-2 col-md-2 col-sm-6 col-6 center tiendas d-none d-sm-block" style="">
                                                 <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
                                                     <a href="https://mallweb.com.ar/catalogsearch/result/?q=wacom" target="_blank"><img class="img-responsive rounded" src="img/logos-argentina/mallweb.png" width="150" style="margin:auto; display: flex; margin-top: 20%"></a>
                                                 </div>
