--- a/brasil-back-to-school.html
+++ b/brasil-back-to-school.html
@@ -239,25 +239,25 @@
                 <section class="section section-background" style="margin-top: -23px;">
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-3 col-md-3 col-sm-3 col-3">
+                            <div class="col-lg-4 col-md-4 col-sm-4 col-4">
                                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active">
                                     <img src="img/products/intuos-pro.png" class="img-responsive text-center" width="180" style="margin:auto;">
                                     <img src="img/wacom-intuos-pro.png" class="img-responsive text-center" width="180" style="margin:auto;">
                                 </li>
                             </div>
-                            <div class="col-lg-3 col-md-3 col-sm-3 col-3">
+                            <div class="col-lg-4 col-md-4 col-sm-4 col-4">
                                 <li data-target="#carouselExampleIndicators" data-slide-to="1">
                                     <img src="img/products/intuos.png" class="img-responsive text-center" width="200" style="margin:auto;">
                                     <img src="img/wacom-intuos.png" class="img-responsive text-center" width="180" style="margin:auto;">
                                 </li>
                             </div>
-                            <div class="col-lg-3 col-md-3 col-sm-3 col-3">
+                            <!--<div class="col-lg-3 col-md-3 col-sm-3 col-3">
                                 <li data-target="#carouselExampleIndicators" data-slide-to="2">
                                     <img src="img/products/cintiq-pro.png" class="img-responsive text-center" width="200" style="margin:auto;">
                                     <img src="img/wacom-cintiq-pro.png" class="img-responsive text-center" width="180" style="margin:auto;">
                                 </li>
-                            </div>
-                            <div class="col-lg-3 col-md-3 col-sm-3 col-3">
+                            </div>-->
+                            <div class="col-lg-4 col-md-4 col-sm-4 col-4">
                                 <li data-target="#carouselExampleIndicators" data-slide-to="3">
                                     <img src="img/products/wacom-one.png" class="img-responsive text-center" width="200" style="margin:auto;">
                                     <img src="img/one-logo.png" class="img-responsive text-center" width="180" style="margin:auto;">
@@ -332,9 +332,9 @@
                             </section>
                             <!--Fin: Ficha Intuos-->
                         </div>
-                        <div class="carousel-item">
+                        <!--<div class="carousel-item">-->
                             <!--Inicio: Ficha Cintiq-->
-                            <section class="section section-background mb-xl img-responsive" style="background-color: #ffffff !important;">
+                            <!--<section class="section section-background mb-xl img-responsive" style="background-color: #ffffff !important;">
                                 <div class="container">
                                     <div class="row">
                                         <div class="col-lg-7 col-sm-8 col-xs-12 left mb-sm pb-5" style="margin-top: 60px;">
@@ -357,9 +357,9 @@
                                         </div>
                                     </div>
                                 </div>
-                            </section>
+                            </section>-->
                             <!--Fin: Ficha Cintiq-->
-                        </div>
+                        <!--</div>-->
                         <div class="carousel-item">
                             <!--Inicio: Ficha ONE-->
                             <section class="section section-background mb-xl img-responsive" style="background-color: #ffffff !important;">
