Cambio de video y links peru

--- a/peru-back-to-school.html
+++ b/peru-back-to-school.html
@@ -334,7 +334,7 @@
                                         <div class="col-lg-2 col-md-2"></div>
                                         <div class="col-lg-8 col-md-8 sol-sm-12 col-12">
                                             <div class="embed-responsive embed-responsive-16by9">
-                                                <iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/KghanqRVFXA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                               <iframe src="https://www.youtube.com/embed/E4_gEI5Hl9s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                             </div>
                                             
                                         </div>
@@ -378,7 +378,7 @@
                                         <div class="row">
                                             <div class="col-lg-2 col-md-2 col-sm-2 col-6 center tiendas" style="padding: 5%;">
                                                 <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
-                                                    <a href="https://www.memorykings.com.pe/" target="_blank"><img src="img/logos-peru/memory.jpg" width="130" style="margin:auto; display: flex; margin-top: 38%;"></a>
+                                                    <a href="https://www.memorykings.com.pe/listados/941/alerta-de-ofertas-de-vuelta-a-clase" target="_blank"><img src="img/logos-peru/memory.jpg" width="130" style="margin:auto; display: flex; margin-top: 38%;"></a>
                                                 </div>
                                             </div>
                                             <div class="col-lg-2 col-md-2 col-sm-2 col-6 center tiendas" style="padding: 5%;">
@@ -393,19 +393,19 @@
                                             </div>
                                             <div class="col-lg-2 col-md-2 col-sm-2 col-6 center tiendas d-sm-block d-md-none" style="padding: 5%;">
                                                 <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
-                                                    <a href="http://www.compuusaperu.com/default_on.asp" target="_blank"><img class="img-responsive" src="img/logos-peru/compusa.jpg" width="150" style="margin:auto; display: flex; margin-top: 42%;"></a>
+                                                    <a href="https://compuusa.com.pe/buscar?controller=search&orderby=position&orderway=desc&selectedcategory=All+Category&search_query=wacom" target="_blank"><img class="img-responsive" src="img/logos-peru/compusa.jpg" width="150" style="margin:auto; display: flex; margin-top: 42%;"></a>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="row">
                                             <div class="col-lg-2 col-md-2 col-sm-2 col-6 center tiendas" style="padding: 5%;">
                                                 <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
-                                                    <a href="http://www.hiraoka.com.pe/" target="_blank"><img class="img-responsive" src="img/logos-peru/hiraoka.png" width="120" style="margin:auto; display: flex; margin-top: 18%;"></a>
+                                                    <a href="http://www.hiraoka.com.pe/productos.php?sc=148&n=VR" target="_blank"><img class="img-responsive" src="img/logos-peru/hiraoka.png" width="120" style="margin:auto; display: flex; margin-top: 18%;"></a>
                                                 </div>
                                             </div>
                                             <div class="col-lg-2 col-md-2 col-sm-2 col-6 center tiendas" style="padding: 5%;">
                                                 <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
-                                                    <a href="https://www.tailoy.com.pe/wacom-tableta-digital-intuos-draw-small.html" target="_blank"><img class="img-responsive" src="img/logos-peru/tailoy.png" width="100" style="margin:auto; display: flex; margin-top: 18%;"></a>
+                                                    <a href="https://www.tailoy.com.pe/tecnologia-tai-loy/tecnologia/wacom.html" target="_blank"><img class="img-responsive" src="img/logos-peru/tailoy.png" width="100" style="margin:auto; display: flex; margin-top: 18%;"></a>
                                                 </div>
                                             </div>
                                             <div class="col-lg-2 col-md-2 col-sm-2 col-6 center tiendas d-none d-sm-block" style="padding: 5%;">
