--- a/peru-back-to-school.html
+++ b/peru-back-to-school.html
@@ -393,7 +393,7 @@
                                             </div>
                                             <div class="col-lg-2 col-md-2 col-sm-2 col-6 center tiendas d-sm-block d-md-none" style="padding: 5%;">
                                                 <div style="background-color: white; padding: 10%; border-radius: 100%; height: 150px; width: 150px;">
-                                                    <a href="https://compuusa.com.pe/buscar?controller=search&orderby=position&orderway=desc&selectedcategory=All+Category&search_query=wacom" target="_blank"><img class="img-responsive" src="img/logos-peru/compusa.jpg" width="150" style="margin:auto; display: flex; margin-top: 42%;"></a>
+                                                    <a href="http://www.compuusaperu.com/default_on.asp" target="_blank"><img class="img-responsive" src="img/logos-peru/compusa.jpg" width="150" style="margin:auto; display: flex; margin-top: 42%;"></a>
                                                 </div>
                                             </div>
                                         </div>
